# gendiff

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: quality-check.yml
gendiff/: __init__.py  generate_diff.py  parser.py
gendiff/format/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: example1.json  example1.yaml  example2.json  example2.yaml  expected11.txt  nested1.yaml  nested2.yaml  nested_diff.json  nested_diff.txt  nested_diff_result.txt  nested_node1.json  nested_node2.json
